# timp

./: .~lock.timp_ddz_limasov.docx#  2017-3-11-lim-Лимасов-С.В.docx  CMakeLists.txt  README.md  ddz.docx  ddz.md  git_full.md  pz0.md  rules.md  task2-1.md  task2-2.md  task2-3.md  task2-4.md  task2-5.md  task2-6.md  timp_ddz_limasov.docx
DDZ/: RKMatcher.cpp  ddz-main.cpp  ddz-test.cpp  ddz.cpp  ddz.h  main.cpp  timp_ddz_limasov.docx
PZ-1/: Отчёт по теме.docx
PZ-3/: pz3.bp1
bos tasks/input/: 2.txt  5.txt
bos tasks/ready_scripts/: task2-1-in.txt  task2-1.sh  task3-8-in.txt  task3-8.sh  task4-4-in.txt  task4-4.sh  task5-5.sh
bos tasks/result/: task2-1.sh  task3-8.sh  task4-4.sh  task5-5.sh
bos-ddz/: file.txt  task1.sh  task2-14.sh  task5-6.sh
bos-tasks/input/: 3.txt  4.txt
bos-tasks/result/: file.txt  task2-14.sh  task3-2.sh  task4-6.sh  task5-6.sh
example/: example.cpp  example_test.cpp  main.cpp
task2-1/: main.cpp  task2-1.cpp  task2-1.h  task2-1_main.cpp  task2-1_test.cpp  tests.cpp
task2-2/: main.cpp  task2-2.cpp  task2-2.h  task2-2_main.cpp  task2-2_test.cpp  tests.cpp
task2-3/: task2-3.cpp  task2-3.h  task2-3_main.cpp  task2-3_test.cpp
task2-4/: main.cpp  task2-4.cpp  task2-4.h  task2-4_main.cpp  task2-4_test.cpp  tests.cpp
task2-5/: main.cpp  newww.cpp  task2-5.cpp  task2-5.h  task2-5_main.cpp  task2-5_test.cpp  tests.cpp
task2-6/: main.cpp  task2-6.cpp  task2-6.h  tests.cpp
